--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
     "name": "SOAD Zuckerberg",
     "alternateName": "Soad Z.",
     "url": "https://your-domain.example/",
-    "image": "https://your-domain.example/profile.jpg",
+    "image": "https://raw.githubusercontent.com/sm-soad00/REPO-NAME/main/SOAD-ZUCKERBERG-FACEBBOK/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg
+",
     "description": "SOAD Zuckerberg is a Bangladeshi creator persona. This is a profile — not affiliated with Meta or Mark Zuckerberg.",
     "nationality": "Bangladesh",
     "sameAs": [
-      "https://facebook.com/your.profile",
+      "https://www.facebook.com/profile.php?id=100001069765077",
       "https://instagram.com/your.profile"
     ],
     "disambiguatingDescription": "Parody/fun character; no affiliation with Meta; not the owner of Facebook."
@@ -164,11 +165,10 @@
       </p>
 
       <div class="row" style="margin-top:10px">
-        <!-- Replace with your real Facebook URL -->
-        <a class="cta" href="https://facebook.com/your.profile" target="_blank" rel="noopener noreferrer" aria-label="Open Facebook profile">
+        <a class="cta" href="https://www.facebook.com/profile.php?id=100001069765077" target="_blank" rel="noopener noreferrer" aria-label="Open Facebook profile">
           <span>Facebook</span><small>↗</small>
         </a>
-        <a class="cta" href="mailto:you@example.com" aria-label="Send email">
+        <a class="cta" href="mailto:smsoad85@gmail.com" aria-label="Send email">
           <span>Email</span><small>✉</small>
         </a>
       </div>
