--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:title" content="Founder of Facebook Official App — SOAD Zuckerberg" />
   <meta property="og:description" content="Premium hacker-style fun/parody profile." />
   <meta property="og:url" content="https://your-domain.example/" />
-  <meta property="og:image" content="https://your-domain.example/og-image.jpg" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/sm-soad00/REPO-NAME/main/SOAD-ZUCKERBERG-FACEBBOK/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
 
   <style>
@@ -117,12 +117,10 @@
     "name": "SOAD Zuckerberg",
     "alternateName": "Soad Z.",
     "url": "https://your-domain.example/",
-    "image src": "https://raw.githubusercontent.com/sm-soad00/REPO-NAME/main/SOAD-ZUCKERBERG-FACEBBOK/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg
-",
+    "image": "https://raw.githubusercontent.com/sm-soad00/REPO-NAME/main/SOAD-ZUCKERBERG-FACEBBOK/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg",
     "description": "SOAD Zuckerberg is a Bangladeshi creator persona. This is a profile — not affiliated with Meta or Mark Zuckerberg.",
     "nationality": "Bangladesh",
     "sameAs": [
-      "https://www.facebook.com/profile.php?id=100001069765077",
       "https://www.facebook.com/profile.php?id=100001069765077"
     ],
     "disambiguatingDescription": "Parody/fun character; no affiliation with Meta; not the owner of Facebook."
@@ -143,21 +141,20 @@
       </div>
 
       <div class="row" style="margin-top:14px">
-        <img class="avatar" src="profile.jpg" alt="SOAD Zuckerberg avatar">
+        <img class="avatar" src="https://raw.githubusercontent.com/sm-soad00/REPO-NAME/main/SOAD-ZUCKERBERG-FACEBBOK/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg" alt="SOAD Zuckerberg avatar">
         <div>
           <h1>
             <span class="typing">
               <span class="glitch" data-text="SOAD ZUCKERBERG">SOAD ZUCKERBERG</span>
             </span>
           </h1>
-          <div class="subtitle">Founder of “Facebook Official App” </div>
+          <div class="subtitle">Founder of "Facebook Official App"</div>
         </div>
       </div>
 
       <p class="copy">
-        He’s known as the “Bangladeshi Zuckerberg” among friends — a playful persona who loves
-        apps, scale, and clean product thinking. This premium hacker aesthetic page 
-        .
+        He's known as the "Bangladeshi Zuckerberg" among friends — a playful persona who loves
+        apps, scale, and clean product thinking. This premium hacker aesthetic page.
       </p>
 
       <p class="copy">
