--- a/index.html
+++ b/index.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Basics -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Founder of Facebook Official App — SOAD Zuckerberg</title>
   <meta name="description" content="SOAD Zuckerberg — Bangladeshi creator persona. Premium hacker-style fun/parody page. Not affiliated with Meta." />
   <meta name="author" content="SOAD Zuckerberg" />
-  <link rel="canonical" href="https://your-domain.example/" />
-
-  <!-- Google Verification (replace content=...) -->
-  <meta name="google-site-verification" content="PASTE_YOUR_VERIFICATION_CODE_HERE" />
-
+  
   <!-- Social Preview -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Founder of Facebook Official App — SOAD Zuckerberg" />
   <meta property="og:description" content="Premium hacker-style fun/parody profile." />
   <meta property="og:url" content="https://your-domain.example/" />
-  <meta property="og:image" content="https://raw.githubusercontent.com/sm-soad00/REPO-NAME/main/SOAD-ZUCKERBERG-FACEBBOK/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg" />
-  <meta name="twitter:card" content="summary_large_image" />
-
+  <meta property="og:image" content="https://raw.githubusercontent.com/sm-soad00/SOAD-ZUCKERBERG-FACEBOOK/main/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg" />
+  
   <style>
     :root{
       --bg:#000; --fg:#00ff88; --fg-soft:#b7ffd9; --glass:rgba(0,0,0,.55);
@@ -109,7 +103,7 @@
     footer{margin-top:12px; opacity:.7; font-size:12px}
   </style>
 
-  <!-- Schema.org Person (fun/parody style; helps Google) -->
+  <!-- Schema.org Person -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -117,7 +111,7 @@
     "name": "SOAD Zuckerberg",
     "alternateName": "Soad Z.",
     "url": "https://your-domain.example/",
-    "image": "https://raw.githubusercontent.com/sm-soad00/REPO-NAME/main/SOAD-ZUCKERBERG-FACEBBOK/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg",
+    "image": "https://raw.githubusercontent.com/sm-soad00/SOAD-ZUCKERBERG-FACEBOOK/main/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg",
     "description": "SOAD Zuckerberg is a Bangladeshi creator persona. This is a profile — not affiliated with Meta or Mark Zuckerberg.",
     "nationality": "Bangladesh",
     "sameAs": [
@@ -141,7 +135,10 @@
       </div>
 
       <div class="row" style="margin-top:14px">
-        <img class="avatar" src="https://raw.githubusercontent.com/sm-soad00/REPO-NAME/main/SOAD-ZUCKERBERG-FACEBBOK/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg" alt="SOAD Zuckerberg avatar">
+        <img class="avatar" 
+             src="https://raw.githubusercontent.com/sm-soad00/SOAD-ZUCKERBERG-FACEBOOK/main/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg" 
+             alt="SOAD Zuckerberg avatar"
+             onerror="this.src='https://i.ibb.co/3yVY3Pj/default-avatar.jpg'">
         <div>
           <h1>
             <span class="typing">
@@ -177,7 +174,7 @@
       </div>
 
       <div class="disclaimer">
-        Disclaimer: This site is a official profile. It is not affiliated with Meta Platforms, Inc.
+        Disclaimer: This site is an official profile. It is not affiliated with Meta Platforms, Inc.
         or Mark Zuckerberg.
       </div>
 
@@ -211,6 +208,11 @@
 
     // Dynamic year
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Fallback image loader
+    document.querySelector('.avatar').onerror = function(){
+      console.log("প্রধান ছবি লোড হয়নি, বিকল্প ছবি ব্যবহার করা হচ্ছে");
+    }
   </script>
 </body>
 </html>
