--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
       <div class="row" style="margin-top:14px">
         <img class="avatar" 
-             src="https://raw.githubusercontent.com/sm-soad00/SOAD-ZUCKERBERG-FACEBOOK/main/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg" 
+             src="https://github.com/sm-soad00/SOAD-ZUCKERBERG-FACEBBOK/blob/main/ff9cd477-3103-4adf-8953-dfeef9687a8d.jpg" 
              alt="SOAD Zuckerberg avatar"
              onerror="this.src='https://i.ibb.co/3yVY3Pj/default-avatar.jpg'">
         <div>
