--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Official profile of SOAD Zuckerberg. Bangladeshi creator and founder of Facebook Official App.">
   
   <!-- Google Verification (Replace YOUR_VERIFICATION_CODE with actual code) -->
-  <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE">
+  <meta name="google-site-verification" content="H0g8ftfsKjcKQpB3UMo5eyLPf2d6rgZSXfv573v_zQk">
   
   <!-- Search Engine Appearance -->
   <meta name="author" content="SOAD Zuckerberg">
@@ -17,7 +17,7 @@
   <!-- Open Graph / Social Media Meta Tags -->
   <meta property="og:title" content="SOAD Zuckerberg - Founder of Facebook Official App">
   <meta property="og:description" content="Official profile of SOAD Zuckerberg. Bangladeshi creator and founder of Facebook Official App.">
-  <meta property="og:url" content="https://yourwebsite.com">
+  <meta property="og:url" content="https://soad-zuckerberg-facebookfounder.vercel.app/">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://i.ibb.co/9mwcvwG7/1000020176.jpg">
   <meta property="og:site_name" content="SOAD Zuckerberg">
